fix(table-td-word-break): included th in overflow-wrap

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -153,6 +153,7 @@
   width: 100%;
   background-color: var(--pf-c-table--BackgroundColor);
 
+  th,
   td {
     overflow-wrap: break-word;
   }
